# dev_template_python

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.poc.yaml  .pre-commit-config.production.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  coverage.xml  pyproject.toml
.cursor/rules/: template.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-please.yml
docs/: SECURITY.md
docs/development/: dev_log.md  dev_log.sample.md  implementation_plan_template.md  llm_knowhow.md  llm_knowhow.sample.md
scripts/: setup_mode.py
src/config/: settings.py
src/core/: cli.py
src/core/services/: __init__.py  item_service.py
src/domain/models/: item.py
src/shared/: __init__.py  errors.py  logging.py  security.py
tests/: test_smoke.py
tests/core/: test_cli.py
tests/core/services/: test_item_service.py
tests/shared/: test_errors.py  test_logging.py  test_security.py
